@@ -240,6 +240,8 @@ function changeToMonths(){
 				<option value="4">Item 4</option>
 			</select>
 		</p>
+		
+		<input type="submit" value="Submit" />
 	</form>
 	
 	<p>
